# FastSignals

./: README.md
libfastsignals/: CMakeLists.txt
libfastsignals/include/: bind_weak.h  connection.h  function.h  function_detail.h  signal.h  signal_impl.h  spin_mutex.h  std_ext_type.h  type_traits.h
libfastsignals/src/: connection.cpp  function_detail.cpp  signal_impl.cpp
